Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-69884

Connections::enabled is not properly revisioned

    XMLWordPrintable

Details

    Description

      Since 5.7, "enabled" in the following example has been resolved differently than in previous versions:

      import QtQuick 2.0
      
      Item {
          id: root
          width: 1280
          height: 768
          enabled: false
      
          Connections {
              target: timer
              onTriggered: console.log(enabled, root.enabled)
          }
      
          Timer {
              id: timer
              interval: 1
              running: true
          }
      }

      even though the import statement wasn't changed. The behavior should have continued as previously, unless the import statement was updated.

      Given the number of versions that have been released with this, it isn't clear whether it is better to try to properly revision, or leave behavior as-is.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            shausman Simon Hausmann
            mbrasser Michael Brasser
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes